# defense_predictor

./: .gitattributes  .gitignore  LICENSE  README.md  defense_predictor_example.ipynb  pyproject.toml
.github/workflows/: ci.yml
defense_predictor/: .gitattributes  beaker_v3.pkl  core.py  downloads.py  esm2_t30_150M_UR50D-contact-regression.pt  esm2_t30_150M_UR50D.pt  gff.py  pgap.py
tests/: debug.py  test_core.py  test_gff.py  test_pgap.py
tests/data/: GCF_000005845_predictions.pq  GCF_003333385.1_11042024.faa  GCF_003333385.1_11042024.ffn  GCF_003333385.1_11042024.gff  GCF_003333385.1_ASM333338v1_cds_from_genomic.fna  GCF_003333385.1_ASM333338v1_feature_table.txt  GCF_003333385.1_ASM333338v1_protein.faa  GCF_003333385_X.csv  GCF_003333385_beaker_predictions.csv
